# virtitta

./: .gitignore  AGENTS.md  README.md  pyproject.toml  virtitta.example.toml  virtitta.toml
tests/: test_smoke.py
virtitta/: __main__.py  app.py  artifact_cache.py  cli.py  config.py  importer.py  repository.py
virtitta/static/: style.css
virtitta/templates/: base.html  index.html  sample_detail.html
